Fix horizontal scrollbar appearing on delete

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   margin-top: 8.5rem;
 }
